# smriti

./: .gitignore  .smritiignore  CONTEXT.md  Cargo.toml  README.md  todo.md
.handoffs/: 2026-04-26T22-47-51.md  2026-04-27T04-37-09.md  2026-04-27T15-52-14.md  2026-04-27T17-53-36.md  2026-04-27T19-02-08.md  2026-04-27T21-35-51.md  2026-04-28T08-45-12.md  2026-04-28T10-04-30.md  2026-04-28T11-15-19.md  2026-04-28T14-41-00.md  2026-04-28T19-10-00.md  2026-04-28T19-27-15.md  2026-04-28T20-51-38.md  2026-04-29T07-42-24.md  2026-04-29T16-41-46.md  2026-05-06T16-50-18.md  2026-05-06T19-11-13.md  2026-05-06T19-58-00.md  2026-05-07T12-53-51.md
docs/: architecture.md  daemon-design-spec.md  daemon-sketch.md  handoff.md  index.md  smriti-kosha-architecture-sketch.md  smriti-next-steps.md  smriti-overall-refactor.md  smriti-sketch.md  todo.md
docs/adr/: 0001-single-writer-watcher.md  0002-db-only-coordination.md  0003-audit-db-separate.md  0004-one-path-per-transaction.md
docs/archived/: grantha-sketch.md
docs/plans/: scanner-batched-commits.md  smriti-improvement-plan.md  triage-find-audit-improvements.md
docs/plans/archived/: daemon-triage-usb.md
migrations/: 0001_initial.sql  0002_scan_generations.sql  0003_watcher_tables.sql  0004_drop_read_audit.sql  0005_heartbeat_states.sql
src/: backup.rs  config.rs  daemon.rs  db.rs  debounce.rs  embedding.rs  envelope.rs  error.rs  hasher.rs  ignore.rs  ignore_defaults.txt  lib.rs  main.rs  mcp.rs  metadata.rs  privacy.rs  roots.rs  scanner.rs  search.rs  triage.rs  watcher.rs
tests/: ignore_test.rs  integration_test.rs  move_detection_test.rs  mtime_shortcircuit_test.rs  privacy_test.rs  process_path_test.rs  scan_batched_test.rs  scan_parity_test.rs  scan_test.rs  watcher_test.rs
