[package]
name = "smriti"
version = "0.2.4"
edition = "2021"

[lib]
name = "smriti"

[[bin]]
name = "smriti"
path = "src/main.rs"

[dependencies]
# Database
rusqlite = { version = "0.31", features = ["bundled-full"] }
sqlite-vec = "0.1"

# Hashing
blake3 = "1"

# Filesystem
walkdir = "2"
ignore = "0.4"

# Parallelism
rayon = "1"

# MCP protocol
rmcp = { version = "1", features = ["server", "transport-io", "macros", "schemars", "transport-streamable-http-server"] }

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "io-std", "net", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Embedding (optional via feature)
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["load-dynamic", "ndarray"], optional = true }
tokenizers = { version = "0.20", optional = true }
ndarray = { version = "0.16", optional = true }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Config
dotenvy = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Schema generation (for MCP)
schemars = { version = "1", features = ["chrono04"] }

# Tempfile for editor-based workflows
tempfile = "3"

# HTTP transport
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["auth"] }

[features]
default = []
embedding = ["ort", "tokenizers", "ndarray"]

[dev-dependencies]
tempfile = "3"
assert_fs = "1"
proptest = "1"
